# LargeCoordinates

./: .gitignore  CMakeLists.txt  LargeCoordinates.h  README.md  build_and_test.bat  clean.bat  test_large_coordinates.cpp
.cursor/rules/: coding_style.mdc  design_principles.mdc  power-shell.mdc
.github/workflows/: ci.yml
